2002-06-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSFileHandle.h: New version of UnixFileHandle
	for combined unix/windoze use.
	* Source/GSFileHandle.m: New combined unix/windows implementation.
	* Source/NSFileHandle.m: Use GSFileHandle under windoze.
	* Source/GNUMakefile: Build GSFileHandle under windoze.

2002-06-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([-respondsToSelector:]) handle nul selectors.
	Bug report by Andy Ruder <aeruder@yahoo.com>

2002-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Change to quote strings in plist output
	aggressively (quote characters that don't really need quoting)
	while still parsing flexibly ... ie handle unquoted strings as
	long as they don't contain 'special' characters.
	Fix for Tom Hageman <th@xs4all.nl>

2002-06-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Tools/AGSParser.m: ([-parseDeclaration:]) Correct wrongly
	positioned autorelease pool in last change. Hope that's the only
	one.

Wed Jun 26 15:32:36 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* base.make.in (OBJC_LIBS): Don't add -lobjc_gc -lgc for gc=yes,
	now should be done by gnustep-make automatically.

Tue Jun 25 13:31:12 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Tools/AGSHtml.m: Tidy up autorelease pool macros so that it
	compiles with gc=yes and old compilers.
	* Tools/AGSParser.m: Idem.
	* Tools/AGSOutput.m: Idem.
	* Tools/HTMLLinker.m: Idem.
	* Tools/autogsdoc.m: Idem.
	* Tools/gdnc.m: Idem.
	* Tools/gsdoc.m: Idem.
	* Tools/make_strings/make_strings.m: Idem.	

Tue Jun 25 13:13:00 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/Additions/GSMime.m ([-rawMimeData:]): Create the
	autorelease pool after the other variables, so that it compiles
	with gc=yes and gcc < 3.x.
	* Source/NSLog.m (NSLogv): Idem.
	
2002-06-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSFileHandle.h: add async read of specific length.