@@ -32,11 +32,7 @@
 #include <Foundation/NSFileHandle.h>
 #include <Foundation/NSPathUtilities.h>
 #include <Foundation/NSBundle.h>
-#ifdef __MINGW__
 #include <Foundation/GSFileHandle.h>
-#else
-#include <Foundation/UnixFileHandle.h>
-#endif
 
 // GNUstep Notification names
 
@@ -61,11 +57,7 @@ static Class NSFileHandle_ssl_class = nil;
   if (self == [NSFileHandle class])
     {
       NSFileHandle_abstract_class = self;
-#ifdef __MINGW__
       NSFileHandle_concrete_class = [GSFileHandle class];
-#else
-      NSFileHandle_concrete_class = [UnixFileHandle class];
-#endif
     }
 }
 
